--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="/lib/bower_components/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body>
 
+
+<script src="/lib/bower_components/jquery/dist/jquery.js"></script>
+<script src="/lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/lib/bower_components/angular/angular.js"></script>
+<script src="/javascripts/main.js"></script>
 </body>
 </html>
