--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
-<body ng-app"Zoe">
-	<nav class="navbar navbar-default" ng-controller="NavCtrl">
+<body ng-app="Zoe">
+	<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -19,27 +19,74 @@
       </button>
       <a class="navbar-brand" href="#">Zoe's Eats</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-	<div>
-		<h1>Zoe's Second Favorite Food</h1>
-        <button type="submit" class="btn btn-default">Show Me The Food</button>
-        
-  </div>
+	<div ng-controller="ItemCtrl">
+		<h1>Zoe's Eats</h1>
+        <!-- <button type="submit" class="btn btn-default">Show Me The Food</button> -->
+		
+<div class="skills-wheel" >
+  <ul class="wheel" >
+    <li ng-repeat="item in items">
+      <img ng-src="{{item.url}}" alt="#" ng-show="showListView"/>
+      <a href="#" title="TITLE TEXT." class="fancybox" >{{item.food}}</a>
+    </li>
+
+    </ul>
+  <a href="#/" title="TITLE TEXT." class="btn"">Spin</a>
+  <!-- <button class="col-xs-6 btn btn-success" ng-click="spin()">Spin </button> -->
+</div>
+
+</div>
+
+
+<!-- OVERLAY  -->
+<div id="pie" class="hide">
+<h2>Pie</h2>
+</div>
+
+<!-- OVERLAY Communication -->
+<div id="pizza" class="hide">
+<h2>Pizza</h2>
+</div>
+
+<!-- OVERLAY Teamwork -->
+<div id="pasta" class="hide">
+<h2>Pasta</h2>
+</div>
+
+<!-- OVERLAY Negotiation -->
+<div id="fruit" class="hide">
+<h2>Fruit</h2>
+</div>
+
+<!-- OVERLAY Problem Solving -->
+<div id="cookies" class="hide">
+<h2>Cookies</h2>
+</div>
+
+<!-- OVERLAY Leadership -->
+<div id="salad" class="hide">
+<h2>Salad</h2>
+</div>
+
+<!-- OVERLAY Organisation -->
+<div id="mexican" class="hide">
+<h2>Mexican</h2>
+</div>
+
+<!-- OVERLAY Entrepreneurial Skills -->
+<div id="bbq" class="hide">
+<h2>BBQ</h2>
+</div>
+  </div> <!-- closing div -->
 
 
 
 
-<script src="/lib/bower_components/jquery/dist/jquery.js"></script>
-<script src="/lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/lib/bower_components/angular/angular.js"></script>
-<script src="/javascripts/main.js"></script>
+<script type="text/javascript" src="/lib/bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="/lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="/lib/bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="/javascripts/main.js"></script>
 </body>
 </html>
